# yousuf

./: .gitignore  Dockerfile  README.md
.github/workflows/: main_yousuf195.yml
backend/: README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/driver/: driver.py
backend/app/handlers/: router.py
backend/app/models/: chat.py  message.py  uploaded_file.py  user.py
backend/app/repository/: mongodb_repo.py  repository.py  test_db.py
backend/app/schema/: schemas.py
backend/app/services/auth_repo/: jwt_repo.py  repository.py  test_repo.py
backend/app/services/hash_repo/: bcrypt_repo.py  repository.py  test_repo.py
backend/app/services/llm_repo/: gpt_repo.py  repository.py  test_repo.py
backend/app/utils/: http.py
backend/dbinit/: setup_mongodb.py
backend/driver/: driver.py
backend/tests/: logout_test.py  router_test.py  setup_test.py
backend/tests/router_tests/: chats_test.py  create_chat_test.py  get_messages_test.py  get_texts_test.py  login_test.py  message_test.py  register_test.py  user_test.py
