[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Rha02 <romuzus08@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.29.0"
fastapi = "^0.110.0"
pymongo = {version = "3.11", extras = ["srv"]}
poetry-dotenv-plugin = "^0.2.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start="app.main:start"