[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Rha02 <romuzus08@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.29.0"
fastapi = "^0.110.0"
poetry-dotenv-plugin = "^0.2.0"
python-multipart = "^0.0.9"
pyjwt = "^2.8.0"
bcrypt = "^4.1.2"
langchain = "^0.2.1"
langchain-openai = "^0.1.8"
pip = "^24.1"
pymongo = "4.6.1"
langchain-mongodb = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start="app.main:start"
setupdb="dbinit.setup_mongodb:main"